# CnfigurationOBJ

./: CMakeLists.txt  README.md
DevParaC++/: CConfiguration.h  CMakeLists.txt  DevParaC++.cpp  DevParaC++.h
